--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "notificacoes",
+  "name": "notificacoes-backend",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "firebase-admin": "^11.10.1"
+    "express": "^5.1.0",
+    "firebase-admin": "^13.5.0"
   }
 }
