--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Navalha de Ouro",
-  "short_name": "Navalha",
+  "short_name": "Navalha de Ouro",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#0c0c0c",
