--- a/manifest.json
+++ b/manifest.json
@@ -9,21 +9,35 @@
   "icons": [
     {
       "src": "/icone.png",
-      "sizes": "192x192",
       "type": "image/png",
+      "sizes": "48x48"
+    },
+    {
+      "src": "/icone.png",
+      "type": "image/png",
+      "sizes": "72x72"
+    },
+    {
+      "src": "/icone.png",
+      "type": "image/png",
+      "sizes": "96x96"
+    },
+    {
+      "src": "/icone.png",
+      "type": "image/png",
+      "sizes": "144x144"
+    },
+    {
+      "src": "/icone.png",
+      "type": "image/png",
+      "sizes": "192x192",
       "purpose": "any"
     },
     {
       "src": "/icone-splash.png",
-      "sizes": "512x512",
       "type": "image/png",
-      "purpose": "maskable"
-    },
-    {
-      "src": "/icone.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any"
+      "purpose": "any maskable"
     }
   ],
   "gcm_sender_id": "434474263075"
